--- a/整合/Spark3/打包运行.md
+++ b/整合/Spark3/打包运行.md
@@ -10,14 +10,37 @@ nohup java -classpath  xxx.jar 2>&1 >  xxx.xxx.classname /dev/null &
 
 # 部署
 
-```bash
-# kafka source
-nohup java -jar kafkasource-1.0-SNAPSHOT.jar 2>&1 > /dev/null &
+> 问题解决
 
-# ods
-/opt/flink-1.12.5/bin/flink run -t yarn-per-job --detached  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
+```bash
+# parent 打包插件排除的包，可能导致上线运行找不到jar，上线打包要加上
 
 # flink-conf.yaml, 避免POM中的jar 和 flink自带的 冲突
 classloader.resolve-order: parent-first
 classloader.check-leaked-classloader: false
+```
+
+> 部署命令
+
+```bash
+# kafka source
+nohup java -jar kafkasource-1.0-SNAPSHOT.jar 2>&1 > /dev/null &
+
+# 建表+action
+spark-submit --class top.chendaye666.create.CompactSmallFile \
+        --master yarn \
+        --name rewrite-smalle-file \
+        --jars /opt/work/iceberg-spark3-runtime-0.12.0.jar \
+        --deploy-mode cluster \
+        --driver-memory 1g \
+        --executor-memory 1g \
+        --executor-cores 2 \
+        /opt/work/sparkicebergddl-1.0-SNAPSHOT.jar
+
+# ods   -yjm,--yarnjobManagerMemory <arg>  (MB)/  -ytm,--yarntaskManagerMemory <arg> (MB)
+/opt/flink-1.12.5/bin/flink run -ynm ods-iceberg -t yarn-per-job --detached  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
+
+# dwd
+/opt/flink-1.12.5/bin/flink run -t -ymn -dwd-iceberg yarn-per-job --detached  /opt/work/datalake/dwd-1.0-SNAPSHOT.jar
+
 ```
