--- a/整合/Spark3/打包运行.md
+++ b/整合/Spark3/打包运行.md
@@ -54,9 +54,9 @@ yarn-session.sh -n 2 -jm 1024 -tm 1024 -d -s 2
 -c,--class <classname> # 如果没有在jar包中指定入口类 则需要在这里通过这个参数指定 
 -m,--jobmanager <host:port> # 指定需要连接的jobmanager(主节点)地址 使用这个参数可以指定一个不同于配置文件中的jobmanager 
 -p,--parallelism <parallelism> # 指定程序的并行度。可以覆盖配置文件中的默认值
--yn # taskmanager个数
 -yjm  # jobmanager内存大小
 -ytm  # taskmanager内存大小
+-yn # taskmanager个数
 -ys    # 一个taskmanager的slot个数
 -ynm,--yarnname # 指定任务名称
 ```
@@ -95,12 +95,20 @@ spark-submit --class top.chendaye666.create.CompactSmallFile \
         --executor-cores 2 \
         /opt/work/sparkicebergddl-1.0-SNAPSHOT.jar
 
-# ods   -yjm,--yarnjobManagerMemory <arg>  (MB)/  -ytm,--yarntaskManagerMemory <arg> (MB)
-/opt/flink-1.12.5/bin/flink run  -t yarn-per-job --detached  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
-/opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods  -yjm 1024 -ytm 1024 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
+# Per-Job Mode    -yjm,--yarnjobManagerMemory <arg>  (MB)/  -ytm,--yarntaskManagerMemory <arg> (MB)
+/opt/flink-1.12.5/bin/flink run  -t yarn-per-job  --detached  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
+/opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods  -yjm 1024 -ytm 1024  -ys 2 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
+/opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods -c top.chendaye666.v2.KafkaToSparkIceberg  -yjm 1024 -ytm 1024 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
 
-# dwd
-/opt/flink-1.12.5/bin/flink run -t  yarn-per-job --detached  /opt/work/datalake/dwd-1.0-SNAPSHOT.jar
-/opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm dwd  -yjm 1024 -ytm 1024 -d /opt/work/datalake/dwd-1.0-SNAPSHOT.jar
+./bin/flink list -t yarn-per-job -Dyarn.application.id=application_XXXX_YY
+./bin/flink cancel -t yarn-per-job -Dyarn.application.id=application_XXXX_YY <jobId>
 
+# Application Mode
+/opt/flink-1.12.5/bin/flink run-application -t yarn-application  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
+./bin/flink list -t yarn-application -Dyarn.application.id=application_XXXX_YY
+./bin/flink cancel -t yarn-application -Dyarn.application.id=application_XXXX_YY <jobId>
+
+/opt/flink-1.12.5/bin/flink run  -t yarn-per-job -h
+
+hdfs dfs -rm -r -skipTrash /warehouse/iceberg
 ```
