没法同时运行2个任务 fuck

--- a/整合/Spark3/打包运行.md
+++ b/整合/Spark3/打包运行.md
@@ -79,9 +79,9 @@ classloader.check-leaked-classloader: false
 
 ```bash
 # kafka source
-nohup java -jar kafkasource-1.0-SNAPSHOT.jar 2>&1 > /dev/null &
+nohup java -jar /opt/work/datalake/kafkasource-1.0-SNAPSHOT.jar 2>&1 > /dev/null &
 # 查看运行情况
-ps -ef | grep kafkas*
+ps -ef | grep kafkasource*
 kafka-console-consumer --bootstrap-server hadoop01:9092  --topic ods_ncddzt
 
 # 建表+action
@@ -97,18 +97,112 @@ spark-submit --class top.chendaye666.create.CompactSmallFile \
 
 # Per-Job Mode    -yjm,--yarnjobManagerMemory <arg>  (MB)/  -ytm,--yarntaskManagerMemory <arg> (MB)
 /opt/flink-1.12.5/bin/flink run  -t yarn-per-job  --detached  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
-/opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods  -yjm 1024 -ytm 1024  -ys 2 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
+/opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods -yqu root.iceberg  -yjm 1024 -ytm 1024  -ys 2 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
 /opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods -c top.chendaye666.v2.KafkaToSparkIceberg  -yjm 1024 -ytm 1024 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
 
-./bin/flink list -t yarn-per-job -Dyarn.application.id=application_XXXX_YY
-./bin/flink cancel -t yarn-per-job -Dyarn.application.id=application_XXXX_YY <jobId>
+/opt/flink-1.12.5/bin/flink list -t yarn-per-job -Dyarn.application.id=application_XXXX_YY
+/opt/flink-1.12.5/bin/flink cancel -t yarn-per-job -Dyarn.application.id=application_XXXX_YY <jobId>
 
 # Application Mode
 /opt/flink-1.12.5/bin/flink run-application -t yarn-application  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
-./bin/flink list -t yarn-application -Dyarn.application.id=application_XXXX_YY
-./bin/flink cancel -t yarn-application -Dyarn.application.id=application_XXXX_YY <jobId>
+/opt/flink-1.12.5/bin/flink list -t yarn-application -Dyarn.application.id=application_XXXX_YY
+/opt/flink-1.12.5/bin/flink cancel -t yarn-application -Dyarn.application.id=application_XXXX_YY <jobId>
 
+
+# yarn-per-job
 /opt/flink-1.12.5/bin/flink run  -t yarn-per-job -h
+/opt/flink-1.12.5/bin/flink run -t yarn-per-job -ynm ods -yqu root.iceberg  -yjm 1024 -ytm 1024  -ys 2 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
 
 hdfs dfs -rm -r -skipTrash /warehouse/iceberg
 ```
+
+
+## yarn 常用命令
+
+```bash
+# 类似linux里的top命令，查看正在运行的程序资源使用情况
+yarn top
+
+# 查看指定queue使用情况
+yarn queue -status root.users.xxxx
+
+# 查看app状态
+yarn application -list -appStates 【ALL,NEW,NEW_SAVING,SUBMITTED,ACCEPTED,RUNNING,FINISHED,FAILED,KILLED】
+
+yarn application -list -appTypes[SUBMITTED, ACCEPTED, RUNNING]
+
+# 移动app到对应的队列
+yarn application -movetoqueue application_1528080031923_0067 -queue root.users.xxx
+
+# kill掉app
+yarn application -kill application_1528080031923_0067
+
+# 查看app状态
+yarn application -status application_1528080031923_0067
+
+# 查看app尝试信息
+yarn applicationattempt -list application_1528080031923_0064
+
+# 打印类路径 
+yarn classpath --glob
+
+# 打印正在执行任务的容器信息
+yarn container -list appattempt_1528080031923_0068_000001
+
+# 打印当前容器信息
+yarn container -status container_1528080031923_0068_01_000002
+
+# 提交任务到yarn
+yarn jar [mainClass] args...
+
+# 查看app运行日志
+yarn logs -applicationId application_1528080031923_0064
+
+# 查看所有节点信息
+yarn node -all -list
+
+# 查看守护进程日志级别
+yarn daemonlog -getlevel n0:8088 rg.apache.hadoop.yarn.server.resourcemanager.rmapp.RMAppImpl
+
+# RMStateStore的格式化. 如果过去的应用程序不再需要，则清理RMStateStore
+yarn resourcemanager [-format-state-store]
+
+
+
+# Usage: yarn rmadmin
+yarn rmadmin
+-refreshQueues  # 重载队列的ACL，状态和调度器特定的属性，ResourceManager将重载mapred-queues配置文件
+
+-refreshNodes # 动态刷新dfs.hosts和dfs.hosts.exclude配置，无需重启NameNode。
+
+dfs.hosts #：列出了允许连入NameNode的datanode清单（IP或者机器名）
+
+dfs.hosts.exclude #：列出了禁止连入NameNode的datanode清单（IP或者机器名）
+
+# 重新读取hosts和exclude文件，更新允许连到Namenode的或那些需要退出或入编的Datanode的集合。
+
+-refreshUserToGroupsMappings # 刷新用户到组的映射。
+
+-refreshSuperUserGroupsConfiguration # 刷新用户组的配置
+
+-refreshAdminAcls # 刷新ResourceManager的ACL管理
+
+-refreshServiceAclResourceManager #  重载服务级别的授权文件。
+
+-getGroups [username] # 获取指定用户所属的组。
+
+-transitionToActive [–forceactive] [–forcemanual] 尝试将目标服务转为 Active 状态。如果使用了–forceactive选项，不需要核对非Active节点。如果采用了自动故障转移，这个命令不能使用。虽然你可以重写–forcemanual选项，你需要谨慎。
+
+-transitionToStandby [–forcemanual] 将服务转为 Standby 状态. 如果采用了自动故障转移，这个命令不能使用。虽然你可以重写–forcemanual选项，你需要谨慎。
+
+-failover [–forceactive] 启动从serviceId1 到 serviceId2的故障转移。如果使用了-forceactive选项，即使服务没有准备，也会尝试故障转移到目标服务。如果采用了自动故障转移，这个命令不能使用。
+
+-getServiceState 返回服务的状态。（注：ResourceManager不是HA的时候，时不能运行该命令的）
+
+-checkHealth 请求服务器执行健康检查，如果检查失败，RMAdmin将用一个非零标示退出。（注：ResourceManager不是HA的时候，时不能运行该命令的）
+
+-help [cmd]显示指定命令的帮助，如果没有指定，则显示命令的帮助。
+
+```
+
+[CDH yarn参数设置](https://blog.csdn.net/peidezhi/article/details/102729889)
