iceberg 数据湖 log->kafka->iceberg_ods->iceberg_dwd->iceberg_dws + flink&spark3&hive 完成；后续还剩可能的运维问题以及性能优化！

--- a/整合/Spark3/打包运行.md
+++ b/整合/Spark3/打包运行.md
@@ -65,7 +65,7 @@ yarn-session.sh -n 2 -jm 1024 -tm 1024 -d -s 2
 
 # 部署
 
-> 问题解决
+## 问题解决
 
 ```bash
 # parent 打包插件排除的包，可能导致上线运行找不到jar，上线打包要加上
@@ -75,26 +75,37 @@ classloader.resolve-order: parent-first
 classloader.check-leaked-classloader: false
 ```
 
-> 部署命令
+## 部署命令
+
+### # kafka source
 
 ```bash
-# kafka source
 nohup java -jar /opt/work/datalake/kafkasource-1.0-SNAPSHOT.jar 2>&1 > /dev/null &
 # 查看运行情况
 ps -ef | grep kafkasource*
 kafka-console-consumer --bootstrap-server hadoop01:9092  --topic ods_ncddzt
+```
 
-# 建表+action
-spark-submit --class top.chendaye666.create.CompactSmallFile \
+### 建表+action
+```bash
+/opt/spark-3.1.2-bin-hadoop2.7/bin/spark-submit --class top.chendaye666.scala.ods.OdsNcddztTableSql \
         --master yarn \
-        --name rewrite-smalle-file \
+        --name ods_table \
         --jars /opt/work/iceberg-spark3-runtime-0.12.0.jar \
         --deploy-mode cluster \
         --driver-memory 1g \
         --executor-memory 1g \
-        --executor-cores 2 \
-        /opt/work/sparkicebergddl-1.0-SNAPSHOT.jar
+        --executor-cores 1 \
+        /opt/work/datalake/sparkicebergddl-1.0-SNAPSHOT.jar
 
+> 注意: `User did not initialize spark context!` -> 注释掉代码中 `.master()` 配置; 另外, 要使用spark3 运行 jar
+> UI界面: `http://hadoop01:8080/`
+
+```
+
+### flink job
+
+```bash
 # Per-Job Mode    -yjm,--yarnjobManagerMemory <arg>  (MB)/  -ytm,--yarntaskManagerMemory <arg> (MB)
 /opt/flink-1.12.5/bin/flink run  -t yarn-per-job  --detached  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
 /opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods -yqu root.iceberg  -yjm 1024 -ytm 1024  -ys 2 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
@@ -113,11 +124,16 @@ spark-submit --class top.chendaye666.create.CompactSmallFile \
 /opt/flink-1.12.5/bin/flink run  -t yarn-per-job -h
 /opt/flink-1.12.5/bin/flink run -t yarn-per-job -ynm ods -yqu root.iceberg  -yjm 1024 -ytm 1024  -ys 2 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
 
+
+```
+
+### hdfs 操作
+
+```bash
 hdfs dfs -rm -r -skipTrash /warehouse/iceberg
 ```
 
-
-## yarn 常用命令
+### yarn 常用命令
 
 ```bash
 # 类似linux里的top命令，查看正在运行的程序资源使用情况
