--- a/整合/Spark3/打包运行.md
+++ b/整合/Spark3/打包运行.md
@@ -109,7 +109,7 @@ kafka-console-consumer --bootstrap-server hadoop01:9092  --topic ods_ncddzt
 # Per-Job Mode    -yjm,--yarnjobManagerMemory <arg>  (MB)/  -ytm,--yarntaskManagerMemory <arg> (MB)
 /opt/flink-1.12.5/bin/flink run  -t yarn-per-job  --detached  /opt/work/datalake/ods-1.0-SNAPSHOT.jar
 /opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods -yqu root.iceberg  -yjm 1024 -ytm 1024  -ys 2 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
-/opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods -c top.chendaye666.v2.KafkaToSparkIceberg  -yjm 1024 -ytm 1024 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
+/opt/flink-1.12.5/bin/flink run -m yarn-cluster -ynm ods -c top.chendaye666.v2.KafkaToSparkIcebergOds  -yjm 1024 -ytm 1024 -d /opt/work/datalake/ods-1.0-SNAPSHOT.jar
 
 /opt/flink-1.12.5/bin/flink list -t yarn-per-job -Dyarn.application.id=application_XXXX_YY
 /opt/flink-1.12.5/bin/flink cancel -t yarn-per-job -Dyarn.application.id=application_XXXX_YY <jobId>
